tests/ui/inference/cannot-infer-async.stderr
error[E0282]: type annotations needed
  --> $DIR/cannot-infer-async.rs:13:9
   |
LL |         Ok(())
   |         ^^ cannot infer type of the type parameter `E` declared on the enum `Result`
   |
help: consider specifying the generic arguments
   |
LL |         Ok::<(), E>(())
   |           +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
